<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.eclipse.paho</groupId>
  <artifactId>java-parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Eclipse Paho MQTT-v5 client</name>
  <url>http://www.eclipse.org/paho</url>
	<description>
		The Paho project provides scalable open-source implementations of open and standard messaging protocols aimed at new, existing, and emerging applications for Machine to Machine (M2M) and Internet of Things (IoT).
	</description>

	<organization>
		<name>Eclipse Paho</name>
		<url>http://www.eclipse.org/paho</url>
	</organization>

	<licenses>
		<license>
			<name>Eclipse Public License - Version 1.0</name>
			<url>http://www.eclipse.org/org/documents/epl-v10.php</url>
		</license>
	</licenses>

	<scm>
		<url>http://git.eclipse.org/c/paho/org.eclipse.paho.mqtt.java.git</url>
		<connection>scm:git://git.eclipse.org/gitroot/paho/org.eclipse.paho.mqtt.java.git</connection>
	</scm>

	<distributionManagement>
		<repository>
			<id>repo.eclipse.org</id>
			<name>Paho Repository - Releases</name>
			<url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
		</repository>
		<snapshotRepository>
			<id>repo.eclipse.org</id>
			<name>Paho Repository - Snapshots</name>
			<url>https://repo.eclipse.org/content/repositories/paho-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

<modules>
    <module>org.eclipse.paho.mqttv5.common</module>
    <module>org.eclipse.paho.mqttv5.client</module>
    <module>org.eclipse.paho.mqttv5.testclient</module>
    <module>org.eclipse.paho.mqttv5.client.test</module>
  </modules>

  <properties>
  	<java.version>1.8</java.version>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>